--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,61 @@
 body {
-	background: #f5e6dd;
+	background: #d8d2ce81;
+	font-family: "Montserrat", sans-serif;
+	color: #201c17;
 }
 h1 {
 	text-align: center;
 }
 
+h2 {
+	margin: 0 0 6px;
+	font-size: 28px;
+}
+
+select {
+	width: 100%;
+	padding: 10px;
+	border-radius: 5px;
+	font-size: 17px;
+}
+.container {
+	display: block;
+	max-width: 600px;
+	margin: 60px auto;
+	background: white;
+	padding: 60px;
+	border-radius: 15px;
+	box-shadow: 8px 8px 20px rgba(0, 0, 0, 0.1);
+}
+
+.city {
+	display: flex;
+	justify-content: space-between;
+	margin: 10px 0;
+	padding: 30px 0;
+	border-bottom: 1px dashed #d8d2ce81;
+}
+
+.city:last-child {
+	border: none;
+}
+
+.date {
+	opacity: 0.7;
+}
+
+.time {
+	font-size: 46px;
+	font-weight: bold;
+}
+
+.time small {
+	font-size: 23px;
+	vertical-align: middle;
+	line-height: 46px;
+}
 footer {
 	text-align: center;
+	font-size: 15px;
+	opacity: 0.7;
 }
